make mycommand nuget package

--- a/MyCommand/MyCommand.csproj
+++ b/MyCommand/MyCommand.csproj
@@ -44,5 +44,10 @@
     <Compile Include="Commander.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="MyCommand.nuspec">
+      <SubType>Designer</SubType>
+    </None>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
