--- a/Package.nuspec
+++ b/Package.nuspec
@@ -2,17 +2,24 @@
 <package >
   <metadata>
     <id>David.MyCommand</id>
-    <version>1.0.0.0</version>
-    <title>MyCommand</title>
-    <authors>MyCommand</authors>
-    <owners>MyCommand</owners>
+    <version>1.0.0</version>
+    <authors>david</authors>
+    <owners>david</owners>
     <licenseUrl>http://LICENSE_URL_HERE_OR_DELETE_THIS_LINE</licenseUrl>
     <projectUrl>http://PROJECT_URL_HERE_OR_DELETE_THIS_LINE</projectUrl>
     <iconUrl>http://ICON_URL_HERE_OR_DELETE_THIS_LINE</iconUrl>
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
-    <description>MyCommand</description>
+    <description>Package description</description>
     <releaseNotes>Summary of changes made in this release of the package.</releaseNotes>
     <copyright>Copyright 2018</copyright>
     <tags>Tag1 Tag2</tags>
+    <dependencies>
+      <dependency id="SampleDependency" version="1.0" />
+    </dependencies>
   </metadata>
+  <!--<files>
+    <file src="MyCommand\bin\Debug\MyCommand.dll" target="lib"></file>
+    <file src="MyDbHelper\bin\Debug\MyDbHelper.dll" target="lib"></file>
+    <file src="MyFile\bin\Debug\MyFile.dll" target="lib"></file>
+  </files>-->
 </package>
