--- a/Package.nuspec
+++ b/Package.nuspec
@@ -1,8 +1,8 @@
 <?xml version="1.0"?>
 <package >
   <metadata>
-    <id>David.MyCommand</id>
-    <version>1.0.0</version>
+    <id>david511382.MyLib</id>
+    <version>1.0.1</version>
     <authors>david</authors>
     <owners>david</owners>
     <licenseUrl>http://LICENSE_URL_HERE_OR_DELETE_THIS_LINE</licenseUrl>
@@ -17,9 +17,10 @@
       <dependency id="SampleDependency" version="1.0" />
     </dependencies>
   </metadata>
-  <!--<files>
-    <file src="MyCommand\bin\Debug\MyCommand.dll" target="lib"></file>
+  <files>
+    <!--<file src="MyCommand\bin\Debug\MyCommand.dll" target="lib"></file>
+	<file src="MyFile\bin\Debug\MyFile.dll" target="lib"></file>
+	-->
     <file src="MyDbHelper\bin\Debug\MyDbHelper.dll" target="lib"></file>
-    <file src="MyFile\bin\Debug\MyFile.dll" target="lib"></file>
-  </files>-->
+  </files>
 </package>
