--- a/Package.nuspec
+++ b/Package.nuspec
@@ -2,7 +2,7 @@
 <package >
   <metadata>
     <id>david511382.MyLib</id>
-    <version>1.0.4</version>
+    <version>1.0.5</version>
     <authors>david</authors>
     <owners>david</owners>
     <licenseUrl>http://LICENSE_URL_HERE_OR_DELETE_THIS_LINE</licenseUrl>
@@ -15,12 +15,14 @@
     <tags>Tag1 Tag2</tags>
     <dependencies>
       <dependency id="SampleDependency" version="1.0" />
-	  <dependency id="Dapper" version="1.50.5" />
+      <dependency id="Dapper" version="1.50.5" />
+      <dependency id="ServiceStack.Redis" version="5.4.0" />
     </dependencies>
   </metadata>
   <files>
     <file src="MyCommand\bin\Debug\MyCommand.dll" target="lib"></file>
-	  <file src="MyFile\bin\Debug\MyFile.dll" target="lib"></file>
+    <file src="MyFile\bin\Debug\MyFile.dll" target="lib"></file>
     <file src="MyDbHelper\bin\Debug\MyDbHelper.dll" target="lib"></file>
+    <file src="MyRedisHelper\bin\Debug\MyRedisHelper.dll" target="lib"></file>
   </files>
 </package>
