--- a/Package.nuspec
+++ b/Package.nuspec
@@ -2,17 +2,17 @@
 <package >
   <metadata>
     <id>david511382.MyLib</id>
-    <version>1.0.6</version>
+    <version>1.0.7</version>
     <authors>david</authors>
     <owners>david</owners>
     <licenseUrl>http://LICENSE_URL_HERE_OR_DELETE_THIS_LINE</licenseUrl>
     <projectUrl>http://PROJECT_URL_HERE_OR_DELETE_THIS_LINE</projectUrl>
     <iconUrl>http://ICON_URL_HERE_OR_DELETE_THIS_LINE</iconUrl>
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
-    <description>Package description</description>
-    <releaseNotes>Summary of changes made in this release of the package.</releaseNotes>
+    <description>my package</description>
+    <releaseNotes>Add reflection</releaseNotes>
     <copyright>Copyright 2018</copyright>
-    <tags>Tag1 Tag2</tags>
+    <tags>File Command DB Redis Reflection</tags>
     <dependencies>
       <dependency id="SampleDependency" version="1.0" />
       <dependency id="Dapper" version="1.50.5" />
@@ -24,5 +24,6 @@
     <file src="MyFile\bin\Debug\MyFile.dll" target="lib"></file>
     <file src="MyDbHelper\bin\Debug\MyDbHelper.dll" target="lib"></file>
     <file src="MyRedisHelper\bin\Debug\MyRedisHelper.dll" target="lib"></file>
+    <file src="MyReflection\bin\Debug\MyReflection.dll" target="lib"></file>
   </files>
 </package>
