--- a/MyDbHelper/MyDbHelper.csproj
+++ b/MyDbHelper/MyDbHelper.csproj
@@ -44,6 +44,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="BulkCopy.cs" />
     <Compile Include="DbQuery.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
