--- a/MyDbHelper/MyDbHelper.csproj
+++ b/MyDbHelper/MyDbHelper.csproj
@@ -46,6 +46,7 @@
   <ItemGroup>
     <Compile Include="BulkCopy.cs" />
     <Compile Include="DbQuery.cs" />
+    <Compile Include="DBStructure.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
